--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bob",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "^1.0.0-rc.2",
+    "iconv-lite": "^0.4.24"
   }
 }
